--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-READ ME (TBC)
+READ ME
 
 This software helps facilitate the processing of ngs data on a SLURM cluster according to parameters commonly used by Levi Yant's lab.
 
