--- a/README
+++ b/README
@@ -28,7 +28,7 @@ Create the initial working directory (default: $HOME/ngs_pipe) & sub-directories
 
 PREPARE FILES
 
-Move input files to the relevant sub-directories as follows:
+Move reference genome & single/paired-end fastqs to the relevant sub-directories as follows:
 
   /ref.gen
     genome.fasta
@@ -41,7 +41,7 @@ Move input files to the relevant sub-directories as follows:
       Reads.fastq.gz
       ...
 
-N.B. Read type (single/paired-end) is automatically assigned depending on whether or not ALL sample fastqs can be assigned a read pair member.
+N.B. Read type is automatically assigned depending on whether or not ALL fastqs can be assigned a pair member.
      At present only novogene read have been tested but it might work with similar naming conventions.
 
 
