--- a/README
+++ b/README
@@ -20,15 +20,19 @@ N.B. Software can be installed within a conda environment (see below).
 
 SETUP
 
-Create the initial working directory (default: $HOME/ngs_pipe) & sub-directories.
+Create the initial working directory/sub-directories.
 
   python pipe_ngs.py -setup [-p </path/to>] [-d <directory_name>]
+
+N.B. Working path/directory name are optional (see below). 
 
 
 
 PREPARE FILES
 
-Move reference genome & single/paired-end fastqs to the relevant sub-directories as follows:
+Move reference genome & single/paired-end fastqs to the relevant sub-directories.
+
+i.e.
 
   /ref.gen
     genome.fasta
@@ -42,7 +46,7 @@ Move reference genome & single/paired-end fastqs to the relevant sub-directories
       ...
 
 N.B. Read type is automatically assigned depending on whether or not ALL fastqs can be assigned a pair member.
-     At present only novogene reads have been tested but other naming conventions may also work.
+     At present only novogene reads have been tested but similar naming conventions should also work.
 
 
 
@@ -74,7 +78,7 @@ Sequentially processes ngs data.
   9       Filter sites
   10      Filter depth
 
-N.B. Single/paired-end reads will be processed differently between stages 1-3.
+N.B. Single/paired-end reads will be processed differently as appropriate between stages 1-3.
      Ploidy only needs to be specified when calling haplotypes at stage 5.
 
 
@@ -83,18 +87,20 @@ ADDITIONAL SETTINGS
 
   Flag                  Default             Description
 
-  -pa <partition>       stage-specific      specify SLURM partition
-  -no <nodes>           stage-specific      specify SLURM nodes
-  -nt <ntasks>          stage-specific      specify SLURM ntasks
-  -me <memory[units]>   stage-specific      specify SLURM memory
-  -wt <HH:MM:SS>        stage-specific      specify SLURM walltime
+  -pa <partition>         stage-specific      specify SLURM partition
+  -no <nodes>             stage-specific      specify SLURM nodes
+  -nt <ntasks>            stage-specific      specify SLURM ntasks
+  -me <memory[units]>     stage-specific      specify SLURM memory
+  -wt <HH:MM:SS>          stage-specific      specify SLURM walltime
  
-  -u                    current user        specify SLURM user name
-  -m                    None                specify email address to receive SLURM notifications
-  -e <environment>      ngs_env             specify conda environment with software installed 
-  -l <limit>            100                 specify task submission limit i.e. how many tasks can be submitted at once
+  -d <diretory_name>      ngs_pipe            specify working directory name
+  -p </path/to>           home path           specify working directory path
+  -u <user_name>          current user        specify SLURM user name
+  -m <email_address>      None                specify email address to receive SLURM notifications
+  -e <environment_name>   ngs_env             specify conda environment with software installed 
+  -l <limit>              100                 specify task submission limit i.e. how many tasks can be submitted at once
   
   -review                                   review task SLURM accounting data for specified stage (i.e. -stage <number> [-x <ploidy>] -review)
   -pipe                                     submit pipeline itself as a task; automatically submits tasks from the hpcc up to the task submission limit
-  -sb                                       activate sub buddy; automatically re-submits any stuck tasks i.e. with 'failed' in NODELIST(REASON)
+  -sb                                       activate sub buddy; automatically re-submits any stalled tasks (i.e. 'failed' within the NODELIST(REASON) description)
   
