--- a/README
+++ b/README
@@ -100,7 +100,7 @@ ADDITIONAL SETTINGS
   -e <environment_name>   ngs_env             specify conda environment with software installed 
   -l <limit>              100                 specify task submission limit i.e. how many tasks can be submitted at once
   
-  -review                                   review task SLURM accounting data for specified stage (i.e. -stage <number> [-x <ploidy>] -review)
-  -pipe                                     submit pipeline itself as a task; automatically submits tasks from the hpcc up to the task submission limit
+  -review                                   review task SLURM accounting data for a specific stage (i.e. -stage <number> [-x <ploidy>] -review)
+  -pipe                                     submit pipeline as a task itself; automatically submits tasks up to the submission limit from the hpcc
   -sb                                       activate sub buddy; automatically re-submits any stalled tasks (i.e. 'failed' within the NODELIST(REASON) description)
   
